package com.apppppp.bluetoothclassictest.model

data class BTDeviceInfo(val name: String, val address: String, val isPaired: Boolean, val isConnected: Boolean)
